--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
+# Example .env (DO NOT commit real .env to GitHub)
 TELEGRAM_TOKEN=your_telegram_token_here
 OPENAI_API_KEY=your_openai_api_key_here
-DATABASE_URL=your_database_url_here
-ADMIN_ID=your_admin_id_here
+DATABASE_URL=postgresql://user:password@host:5432/dbname
+ADMIN_ID=your_telegram_id
